@@ -10,6 +10,7 @@ static const char	RCSid[] = "$Id$";
 #define _USE_MATH_DEFINES
 #include  <math.h>
 #include  "fvect.h"
+#include  "random.h"
 
 double
 Acos(double x)			/* insurance for touchy math library */
@@ -147,6 +148,28 @@ FVECT  v
 	return(len);
 }
 
+
+int
+getperpendicular(		/* choose random perpedicular direction */
+	FVECT vp,			/* returns normalized */
+	const FVECT v			/* input vector must be normalized */
+)
+{
+	FVECT	v1;
+	int	i;
+					/* randomize other coordinates */
+	v1[0] = 0.5 - frandom();
+	v1[1] = 0.5 - frandom();
+	v1[2] = 0.5 - frandom();
+	for (i = 3; i--; )
+		if ((-0.6 < v[i]) & (v[i] < 0.6))
+			break;
+	if (i < 0)
+		return(0);
+	v1[i] = 1.0;
+	VCROSS(vp, v1, v);
+	return(normalize(vp) > 0.0);
+}
 
 int
 closestapproach(			/* closest approach of two rays */
