@@ -235,17 +235,8 @@ samp_hemi(				/* sample indirect hemisphere */
 	d = 1.0/(n*n);
 	scalecolor(hp->acoef, d);
 					/* make tangent plane axes */
-	hp->uy[0] = 0.5 - frandom();
-	hp->uy[1] = 0.5 - frandom();
-	hp->uy[2] = 0.5 - frandom();
-	for (i = 3; i--; )
-		if ((-0.6 < r->ron[i]) & (r->ron[i] < 0.6))
-			break;
-	if (i < 0)
+	if (!getperpendicular(hp->ux, r->ron))
 		error(CONSISTENCY, "bad ray direction in samp_hemi");
-	hp->uy[i] = 1.0;
-	VCROSS(hp->ux, hp->uy, r->ron);
-	normalize(hp->ux);
 	VCROSS(hp->uy, r->ron, hp->ux);
 					/* sample divisions */
 	for (i = hp->ns; i--; )
